--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,12 @@
     "keywords": ["flow", "fcl"],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
+        "php": "^8.1",
+        "simplito/elliptic-php": "^1.0",
         "web3p/rlp": "^0.3.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0",
+        "phpunit/phpunit": "^9.3",
         "friendsofphp/php-cs-fixer": "^2.0"
     },
     "autoload": {
@@ -29,7 +30,7 @@
     },
     "config": {
         "platform": {
-            "php": "7.2"
+            "php": "8.1.3"
         },
         "sort-packages": true
     }
