--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "simplito/elliptic-php": "^1.0",
         "web3p/rlp": "^0.3.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.3",
-        "friendsofphp/php-cs-fixer": "^2.0"
+        "friendsofphp/php-cs-fixer": "^3.8.0"
     },
     "autoload": {
         "psr-4": {
@@ -33,5 +32,10 @@
             "php": "8.1.3"
         },
         "sort-packages": true
+    },
+    "scripts": {
+        "main": "Main::run",
+        "tests": "phpunit",
+        "fix": "php-cs-fixer fix ./src/"
     }
 }
